# TestTask

./: Dockerfile  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  routes.py  shemas.py
test/: test_auth.py
